# k_ctds

./: .buildinfo  .coverage  .gitignore  .python-version  CHANGELOG.html  CHANGELOG.md  Dockerfile-valgrind  LICENSE  LICENSE.FreeTDS  LICENSE.OpenSSL  MANIFEST.in  Makefile  README.rst  THIRD_PARTY_NOTICES  api.html  appveyor.yml  bulk_insert.html  callproc.html  conftest.py  connection.html  ctds.html  cursor.html  encryption.html  example.html  execute.html  faq.html  genindex.html  index.html  install.html  objects.inv  parameter.html  pool.html  pooling.html  py-modindex.html  pylintrc  pyproject.toml  results.html  rowlist.html  search.html  searchindex.js  (+6 more)
.doctrees/: CHANGELOG.doctree  api.doctree  bulk_insert.doctree  callproc.doctree  connection.doctree  ctds.doctree  cursor.doctree  encryption.doctree  environment.pickle  example.doctree  execute.doctree  faq.doctree  index.doctree  install.doctree  parameter.doctree  pool.doctree  pooling.doctree  results.doctree  rowlist.doctree  transactions.doctree  types.doctree
.github/workflows/: ci-cd.yml  wheels.yml
_sources/: CHANGELOG.md.txt  bulk_insert.rst.txt  cursor.rst.txt  example.rst.txt  execute.rst.txt  faq.rst.txt  index.rst.txt  install.rst.txt  pooling.rst.txt  transactions.rst.txt
appveyor/: after_test.ps1  build_script.ps1  install.ps1  test_script.ps1
doc/: bulk_insert.rst  callproc.rst  conf.py  connection.rst  ctds.rst  cursor.rst  encryption.rst  example.rst  execute.rst  faq.rst  install.rst  parameter.rst  pool.rst  pooling.rst  results.rst  rowlist.rst  transactions.rst  types.rst
misc/: valgrind-python.supp
scripts/: ctds-coverage.sh  ctds-valgrind.sh  ensure-sqlserver.sh  k-ctds-coverage.sh
src/ctds/: __init__.py  _bulk_insert.py  connection.c  cursor.c  parameter.c  pyutils.c  tds.c  type.c
src/ctds.egg-info/: PKG-INFO  SOURCES.txt
src/ctds/include/: push_warnings.h  type.h
src/k_ctds/: _bulk_insert.py  connection.c  cursor.c  parameter.c  tds.c  type.c
src/k_ctds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: base.py  test_bulk_insert_auto_encode.py  test_bulk_insert_auto_encode_integration.py  test_connection.py  test_connection___enter__.py  test_connection___exit__.py  test_connection_autocommit.py  test_connection_bulk_insert.py  test_connection_close.py  test_connection_commit.py  test_connection_cursor.py  test_connection_database.py  test_connection_messages.py  test_connection_rollback.py  test_connection_spid.py  test_connection_tds_version.py  test_connection_timeout.py  test_connection_use.py  test_cursor.py  test_cursor___enter__.py  test_cursor___exit__.py  test_cursor_arraysize.py  test_cursor_callproc.py  test_cursor_close.py  test_cursor_connection.py  test_cursor_description.py  test_cursor_execute.py  test_cursor_executemany.py  test_cursor_fetchall.py  test_cursor_fetchmany.py  test_cursor_fetchone.py  test_cursor_next.py  test_cursor_nextset.py  test_cursor_parameter.py  test_cursor_row.py  test_cursor_rowcount.py  test_cursor_rowlist.py  test_cursor_rownumber.py  test_cursor_setinputsizes.py  test_cursor_setoutputsize.py  (+16 more)
tests/pool/: test_pool.py
wheelhouse/: ctds-1.14.0-cp312-cp312-linux_x86_64.whl
windows/: freetds-install.ps1  run_with_msvc.cmd
